# palsav-cypy

./: .gitignore  README.md  pyproject.toml  setup.py
palsav/: _fast_archive.pyx  archive.py  cli.py  gvas.py  json_tools.py  palsav.py  paltypes.py
palsav/commands/: convert.py
palsav/compressor/: __init__.py  oozlib.py  zlib.py
palsav/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  guild_item_storage.py  guild_lab.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_concrete_model_module.py  map_model.py  map_object.py  work.py  work_collection.py  worker_director.py
