[build-system]
requires = ["setuptools>=68.0", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palsav-cypy"
version = "0.1.0"
description = "High-performance Palworld save file parser and converter (Cython-accelerated)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "loguru",
    "orjson>=3.9.0",
    "pyooz @ git+https://github.com/CyrixJD115/oozle-cypy.git",
    "cython>=3.0",
    "setuptools>=68.0",
]

[project.scripts]
palsav = "palsav.cli:main"

[tool.setuptools.packages.find]
include = ["palsav*"]
