[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palsav-cypy"
version = "0.2.0"
description = "High-performance Palworld save file parser and converter with Oodle compression support"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
    "loguru",
    "orjson>=3.9.0",
    "pyooz @ git+https://github.com/CyrixJD115/oozle-cypy.git",
    "setuptools>=68.0",
]

[project.scripts]
palsav = "palsav.cli:main"

[tool.setuptools.packages.find]
include = ["palsav*"]
